# genai-poc

./: .gitignore  README.md  main.py  pyproject.toml
agent_framework/: 1_tool_call_agent_openai.ipynb  READEME.md  main.py
crew_ai/: 1_email_agent.ipynb
langchain/: 1_simple_chain.ipynb  2_simple_chain_with_litellm.ipynb  README.md
langgraph/: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call-ollama.ipynb  4_tool_call-openai.ipynb  5_tool_call-_agent-openai.ipynb  6_memory-openai.ipynb  8_human_in_the_loop_HITL.py  README.md
strands/: agent-conv-manager.py  agent01.py  agent02.py  bedrock-agentcore.py  curl.sh
