[project]
name = "crewai-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251001",
    "crewai[tools]>=0.201.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-litellm>=0.2.3",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "strands-agents[litellm]>=1.15.0",
    "strands-agents-tools>=0.2.14",
    "bedrock-agentcore>=1.0.5",
]
